fix some icons and wrapping

--- a/public/output.css
+++ b/public/output.css
@@ -1415,6 +1415,10 @@ video {
   max-width: 20rem;
 }
 
+.max-w-\[250px\]{
+  max-width: 250px;
+}
+
 .flex-1{
   flex: 1 1 0%;
 }
